namespace EnterpriseHub.Domain.Identity;

public enum TenantRole
{
    Owner = 0,
    Admin = 1,
    Member = 2,
    Viewer = 3
}
